--- a/html&css.html
+++ b/html&css.html
@@ -4,13 +4,13 @@
 <title>Page Title</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+<body>
 <h1>SheCanCode Web</h1>
 <p style="text-align: center;">This is day 1</p>
 <P style="text-align: center; font-size: 25px;">Our Group we are now expert in html and css</P>
 <img src="download (1).jfif" alt=""><br><br>
-<a href="https://shecancode-materials.netlify.app/home" >Search</a>
+<button><a href="https://shecancode-materials.netlify.app/home" >search here...</a></button>
 
-<body>
 
 </body>
 </html>
